# compute-eval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATASET_CARD.md  DOMAIN_MAP.md  Dockerfile  LICENSE  README.md  example_config_gen_samples.yaml  hatch_build.py  pyproject.toml
compute_eval/: __init__.py  data.py  evaluation.py  execution.py  generate_completions.py  main.py  prompts.py  rag_service.py  token_provider.py
compute_eval/cuda_tools/: Makefile  activity_processing.cpp  activity_processing.h  json_output.cpp  json_output.h  libcuda_profile.cpp  nvtx_correlation.cpp  nvtx_correlation.h  nvtx_interpose.cpp  profiler_lifecycle.cpp  profiler_lifecycle.h  profiler_state.cpp  profiler_state.h  profiler_types.h
compute_eval/data/: data_model.py  data_pack.py  metrics_data_model.py  utils.py
compute_eval/evaluators/: __init__.py  base.py  docker_evaluator.py  local_evaluator.py
compute_eval/models/: model_interface.py  openAI_model.py
compute_eval/profilers/: __init__.py  base_profiler.py  cupti_profiler.py  ncu_profiler.py
compute_eval/utils/: eval_utils.py  parsing.py
compute_eval/utils/language_data/: update-linguist-languages.py
data/: LICENSE  cccl_problems_073025.jsonl  combined_problems_07302025.jsonl  cuda_problems_073025.jsonl
docker/: Dockerfile.cpp  Dockerfile.local  Dockerfile.python-cuda12  Dockerfile.python-cuda13
docs/papers/: README.md
